@@ -82,50 +82,5 @@
                 </plugins>
             </build>
         </profile>
-
-        <profile>
-            <id>jdk23</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>default-compile</id>
-                                <configuration>
-                                    <release>23</release>
-                                    <compilerArgs>
-                                        <arg>-parameters</arg>
-                                        <arg>--enable-preview</arg>
-                                    </compilerArgs>
-                                    <compileSourceRoots>
-                                        <compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
-                                        <compileSourceRoot>${project.basedir}/src/main/java17</compileSourceRoot>
-                                        <compileSourceRoot>${project.basedir}/src/main/java23</compileSourceRoot>
-                                    </compileSourceRoots>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>default-testCompile</id>
-                                <configuration>
-                                    <release>23</release>
-                                    <compilerArgs>
-                                        <arg>--enable-preview</arg>
-                                    </compilerArgs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>--enable-preview</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 </project>
